<resources>
    <string name="app_name">ChallengeAndroid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="username">Username:</string>
    <string name="full_name">Full Name:</string>
    <string name="name">Name:</string>
    <string name="id">ID:</string>
    <string name="description">Description:</string>
    <string name="git_url">Git URL:</string>
    <string name="ssh_url">SSH URL:</string>
    <string name="svn_url">SVN URL</string>
    <string name="language">language:</string>
    <string name="visibility">visibility:</string>
    <string name="watchers_count">Watchers count</string>
    <string name="forks_count">Forks Count</string>
    <string name="size">Size:</string>
    <string name="default_branche">Default Branche:</string>
    <string name="empty_field_message">enter your username</string>
    <string name="unknown_error_message">Unknown error</string>
</resources>